# physics-lab-modelling

./: .gitignore  M1.ipynb  M1.md  README.md
M1/: M1.ipynb
M10/: M10.ipynb  M10.md
M10A/: M10A.ipynb  M10A.py
M2/: M2.ipynb
M3/: 3D.py  M3.ipynb
M4/: 3D.ipynb  3D.md  3D.py  M4.ipynb
M6/: .clang-format  CMakeLists.txt  M6.cpp  M6.ipynb
sem2_M1/: M1.md
sem2_M2/: M2.md
sem2_M5/: M5.md
sem_2/M1/: M1.py  М1.ipynb
sem_2/M3/: M3.py
sem_2/M5/: main.py
